@@ -50,6 +50,12 @@
       (internally determined) user name, currently \code{Sys.info()["user"]}
       or \env{LOGNAME}.  This is a (modified) fulfillment of Will Landau's
       suggestion in \PR{17530}.
+
+      \item \pkg{tools}\code{::testInstalledBasic()} gets new optional
+      arguments \code{outDir} and \code{testSrcdir}, e.g., allowing to use
+      it in a \sQuote{<builddir> != <srcdir>} setup, and in standard
+      \dQuote{binary} Windows installation \bold{if} a source \file{tests/}
+      folder is present.
     }
   }
 
